--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,18 @@
  *= require_self
  */
 @import "bulma";
+
+.navbar-brand .title {
+    color: orange;
+}
+
+.image {
+    border-radius: 50%;
+    img {
+        border-radius: 50%;
+    }
+}
+
+.notifications:not(:last-child) {
+    margin-bottom: 0;
+}
