Added Everything Finished the project

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,14 @@
         border-radius: 50%;
     }
 }
+.bg-orange {
+    color: white;
+    background-color: orange;
+}
 
+.c-orange {
+    color: orange;
+}
 .notification:not(:last-child) {
     margin-bottom: 0;
 }
