--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -1,42 +1,48 @@
 <div class="column is-half">
-  <article class="media box">
-    <figure class="media-left">
-      <p class="image is-64x64">
-        <img src="https://bulma.io/images/placeholders/64x64.png">
-      </p>
-    </figure>
-    <div class="media-content">
-      <%= render 'form' %>
-    </div>
-  </article>
+  <% if user_signed_in? %>
+    <article class="media box">
+      <figure class="media-left">
+        <p class="image is-64x64">
+          <%= gravatar_image_tag(current_user.name, size: 64, alt: current_user.name) %>
+        </p>
+      </figure>
+      <div class="media-content">
+        <%= render 'form' %>
+      </div>
+    </article>
+  <% end %>
 
     <% @posts.each do |p| %>
     <div class="box">
         <article class="media">
         <div class="media-left">
             <figure class="image is-64x64">
-                <img src="https://bulma.io/images/placeholders/64x64.png">
+              <%= gravatar_image_tag(p.user.name, size: 64, alt: p.user.name) %>
             </figure>
         </div>
         <div class="media-content">
             <div class="content">
-            <strong>joker</strong>
-            <small>@joker101</small>
-            <p><%= p.post %></p>
+              <% if user_signed_in? %>
+                <strong><%= p.user.name %></strong>
+                <small>@<%= p.user.username %></small>
+              <% end %>
+              <p><%= p.post %></p>
             </div>
             <nav class="level">
             <div class="level-left is-mobile">
-                <%= link_to p, class: "level-item" do %>
-                <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
-                <% end %>
+              <%= link_to p, class: "level-item" do %>
+              <span class="icon"><i class="fa fa-link c-orange" aria-hidden="true"></i></span>
+              <% end %>
+              <% if user_signed_in? && current_user.id == p.user_id %>
                 <%= link_to edit_post_path(p), class: "level-item" do %>
-                <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+                <span class="icon"><i class="fa fa-pencil c-orange" aria-hidden="true"></i></span>
                 <% end %>
                 <%= link_to p, method: :delete, data: {confirm: "Are You Sure You Want To Delete This Post"} do %>
-                <span class="icon"><i class="fa fa-trash" aria-hidden="true"></i></span>
+                <span class="icon"><i class="fa fa-trash c-orange" aria-hidden="true"></i></span>
                 <% end %>
-            </div>
-            </nav>
+              <% end %>
+              </div>
+              </nav>
         </div>
         </article>
     </div>
