--- a/app/views/posts/_who-to-follow.html.erb
+++ b/app/views/posts/_who-to-follow.html.erb
@@ -1,18 +1,20 @@
 <div class="column">
   <nav class="panel">
-    <p class="panel-heading">Suggested Users To Follow</p>
+    <p class="panel-heading">Project Information</p>
     <div class="panel-block">
       <article class="media">
         <div class="media-left">
           <figure class="image is-32x32">
-            <img src="https://bulma.io/images/placeholders/64x64.png">
+            <%= image_tag "k-odin.svg" %>
           </figure>
         </div>
         <div class="media-content">
           <div class="content">
             <p>
-              <strong>dora</strong>
-              <small>@explorer</small>
+              <a href="https://www.theodinproject.com/">
+                <strong>TheOdinProject</strong>
+                <small>@TheOdinProject</small>
+              </a>
             </p>
           </div>
         </div>
@@ -22,14 +24,16 @@
       <article class="media">
         <div class="media-left">
           <figure class="image is-32x32">
-            <img src="https://bulma.io/images/placeholders/64x64.png">
+            <%= image_tag "git.png" %>
           </figure>
         </div>
         <div class="media-content">
           <div class="content">
             <p>
-              <strong>ben</strong>
-              <small>@ten</small>
+              <a href="https://github.com/Marwan515/Clubhouse">
+                <strong>Github Repo Link</strong>
+                <small>@marwan515</small>
+              </a>
             </p>
           </div>
         </div>
@@ -39,14 +43,16 @@
       <article class="media">
         <div class="media-left">
           <figure class="image is-32x32">
-            <img src="https://bulma.io/images/placeholders/64x64.png">
+            <%= image_tag "odin.png" %>
           </figure>
         </div>
         <div class="media-content">
           <div class="content">
             <p>
-              <strong>shinchan</strong>
-              <small>@naughty</small>
+              <a href="https://www.theodinproject.com/lessons/ruby-on-rails-members-only">
+                <strong>This Project Lesson Link</strong>
+                <small>@TheOdinProject</small>
+              </a>
             </p>
           </div>
         </div>
