--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <p class="alert"><%= alert %></p>
       </div>
     <% end %>
-    <nav class="navbar is-info">
+    <nav class="navbar is-success">
       <div class="navbar-brand">
         <%= link_to root_path, class: "navbar-item" do %>
           <h1 class="title is-5">ClubHouse</h1>
@@ -33,12 +33,31 @@
           <span></span>
         </div>
       </div>
+
+
       <div id="navbarExample" class="navbar-menu">
         <div class="navbar-end">
-          <div class="field is-grouped">
-            <p class="control">
-              <%= link_to 'New Post', new_post_path, class: "button is-info is-inverted" %>
-            </p>
+          <div class="navbar-item">
+            <div class="field is-grouped">
+              <p class="control">
+                <%= link_to 'New Post', new_post_path, class: "button bg-orange" %>
+              </p>
+              <% if user_signed_in? %>
+                <p class="control">
+                  <%= link_to current_user.name, edit_user_registration_path, class: "button bg-orange" %>
+                </p>
+                <p class="control">
+                  <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "button bg-orange" %>
+                </p>
+              <% else %>
+                <p class="control">
+                  <%= link_to "Sign in", new_user_session_path, class: "button bg-orange" %>
+                </p>
+                <p class="control">
+                  <%= link_to "Sign up", new_user_registration_path, class: "button bg-orange" %>
+                </p>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
