--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,17 @@
-<%= simple_form_for(@post) do |p| %>
-  <%= p.error_notification %>
-  <div class="field">
-    <div class="control">
-      <%= p.input :post, label: "Post About it", input_html: { class: "textarea" }, wrapper: false, label_html: { class: "label" }, placeholder: "Post About...." %>
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-4">
+        <%= simple_form_for(@post) do |p| %>
+          <%= p.error_notification %>
+          <div class="field">
+            <div class="control">
+              <%= p.input :post, label: "Post About it", input_html: { class: "textarea" }, wrapper: false, label_html: { class: "label" }, placeholder: "Post About...." %>
+            </div>
+          </div>
+          <%= p.button :submit, class: "button bg-orange" %>
+        <% end %>
+      </div>
     </div>
   </div>
-  <%= p.button :submit, class: "button is-info" %>
-<% end %>
+</div>
