--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,18 @@
-<h1>Editing post</h1>
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-4">
+      <h2 class="title is-2">Editing post</h1>
 
-<%= render "form", post: @post %>
+        <%= render "form", post: @post %>
 
-<br>
+        <br>
 
-<div>
-  <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
+        <div>
+          <%= link_to "Show this post", @post %> |
+          <%= link_to "Back to posts", posts_path %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
