--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,17 @@
-<h1>New post</h1>
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-4">
+      <h1 class="title is-2">New post</h1>
 
-<%= render "form", post: @post %>
+        <%= render "form", post: @post %>
 
-<br>
+        <br>
 
-<div>
-  <%= link_to "Back to posts", posts_path %>
+        <div>
+          <%= link_to "Back to posts", posts_path %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
