--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,19 @@
-<p style="color: green"><%= notice %></p>
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-4">
+        <p style="color: green"><%= notice %></p>
 
-<%= render @post %>
+        <%= render @post %>
 
-<div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
-  <%= link_to "Back to posts", posts_path %>
-
-  <%= button_to "Destroy this post", @post, method: :delete %>
+        <div>
+          <% if user_signed_in? && user.id == post.user_id %>
+            <%= link_to "Edit this post", edit_post_path(@post) %> |
+            <%= button_to "Destroy this post", @post, method: :delete %>
+          <% end %>
+          <%= link_to "Back to posts", posts_path %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
